--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.hibernate.ogm:hibernate-ogm-core:5.4.1.Final'
+    // caso não funcione apenas com a dependência do mongodb use em conjunto o ogm-core
+    // implementation 'org.hibernate.ogm:hibernate-ogm-core:5.4.1.Final'
     implementation 'org.hibernate.ogm:hibernate-ogm-mongodb:5.4.1.Final'
 }
 
